Añadir avisos optativos por WhatsApp independientes de push para recepción
